--- a/Presentation/Properties/Resources.resx
+++ b/Presentation/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="4211763" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\images\4211763.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="preview16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\preview16.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
