--- a/Presentation/User Role/UserPanel.resx
+++ b/Presentation/User Role/UserPanel.resx
@@ -425,10 +425,10 @@
   </data>
   <data name="BtnSideBar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DAAACwwBP0AiyAAAAFtJREFUaEPt1rENgDAMAEHvAOuCWDwKDWUqGmxzJ/0ALhI7APjEOLarQzHOfXbI
-        INlqNMji4VTs+bsA4OdWW7JijsZsGSRbzngAaGW1JSvmaMyWQbLljAfgvYgbLQVkhThIJMUAAAAASUVO
-        RK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAABxSURBVGhD7dYxCoQwFATQHE/3Nknu68Ky99AIKcS0gl95
+        D6aKgUkhTAKAq+ScP7XWb8saPHvHudcetcPf4ePo+ffao3b4mofMpZTldCFc9o7tN5h6bQCARzDj74kZ
+        HyZmPADwRGb8PTHjw8SMB+BaKW2r/sop9m0OSgAAAABJRU5ErkJggg==
 </value>
   </data>
   <metadata name="SideBarTransition.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -436,108 +436,81 @@
   </metadata>
   <data name="HomeBTN.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DAAACwwBP0AiyAAAAypJREFUeF7tlz9rFEEUwE/RRrDIzRwhEkTxT0AbsbGyE7+FkEr8AiKY291CEL+B
-        plB7FRtTpTSKGFPYq2BhIRoMioXobcb3Zt8e6+VmncnuvNu9zA8e3My8N++9eW9nbzuBQCAQCAQCAUZU
-        0j2TxuLRIJabKPgb52h5elFJ58AgFjdAfqWxVEWBg/idRvKOuto5SOrTherPnIUk1ynZbUj2nrop51Dw
-        t57L1tZRl8zaz2jVIcGPf5LuJVoeoiJ5cRCJd1PVDTuqHstldV0cpuUdqGTuECY+iGSa2Yi3Kumdo+X2
-        YFt1E63uBteqm2hdN1StuolWdENdVTfR2G7wVXUTjeoG31U3MfFu4K66iYl0w6SqboKtG5pSdRNeu6Fp
-        VTdRezc0veomaukG1RcL/1Qdv9waWHUTGCvGTB2LOcAXplig5XJUIk9DG221qeomMHbMgXL5pvryFC2Z
-        SWPxEA3SSDxrU9VN6G6IxQrl9ICmzcAz/xmVVSKO0FTrUUl3Pu8CmjIDB/AlO4DuPE1pVNS9AI/HeRo6
-        AZfSS10BBwGbNTJ3AmPEWGmoUcnM0WxPuUVTZkDxaRaEWFHJ7DG1NHscxstwetuwwXdScyLbz13I3AmI
-        8wfGqi9u6GLMAfZazfYUT0jNjL4EoVWKgRSF1Jxwta3D16hATptWlyACfyBOwmndhzb8AIafYIO7+Uak
-        4oSrbR2+8MKD+L/qN1okHqul3glS2R11BEXD/8LpyxrOoDh9WcMZFKcvaziD4vRlDWdQnL6s8RUUfHXu
-        h9v6GvwBewE39mt4f9/25asSvoKC1+2tfL0ocCA/ScWJ3J6G9VFl4zJbfFfjGiR8RX/Lx+K9HkfyDak4
-        UearElU2LrMdHkC/twifr5eHBxDLDVJxosxXJapsXGYLiSb5elH2zCMAk/uw+rC+Cm3/qnggpOJEFdtS
-        OIPi9GUNZ1CcvqzhDIrTlzWcQXH6soYzKE5f1nAGBf8N1uA1+JyGTlSJs5QqG3sLagzefFXZ2FtQY/Dm
-        K9/YRrCFyUwzTse3kOv6wKTGORono8+vi20dstv7IxAIBAKBQCCwd+h0/gJOZ0Bh4Pmd4gAAAABJRU5E
-        rkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAALLSURBVGhD7Zg9aBRRFIVXEUXwD0GLYGGnjWBjJ1gIgp2d
+        drGyWFjW/bfbNq2lrZUgiCCWIvhDQJRUNmJjI6IICpJCY/S84WwYJ+fKCdnRt7AffOxm3rvn3rfMTkIa
+        cwza7fbxbrf7OJne8/Js0ev1LsLP8FcSh/kCL3F5JtiBwUcY+ufkECXXcX1pPB7v5N48abVaBzDoPXGA
+        qg87nc5hluVFv98/jUO8FUNLsfcdXs+wvKC6ZyKX6wfNFuFqublpqllkTPowruPn76X1Qi7XB26lPfhk
+        b1Ybb1Vk3Mattjdl4v1ZXHtfXi+a1cVwODyGJsvlhtsRB3g1eUTjAzqCnx9N1oqGdYBP7xwafJg0mqKf
+        cHtdSD3wZNuFwyzh2nrRdMoUj1a4xsZ1uIYD3Ei9UkO8v5xep8ZgMNiP0LuicV0+wK12iO2nAw5wEr4W
+        zWoVPd/gNj7FMbYHAq8g8Fu1yT90Ff2vcpytU/qyqfD/4S3MtJvjeaDoKA6x8fjLRcz0DN/VBY75d7B5
+        0y+kzPyIGc9zXA02XYOb/kTITRzkB15HGLl4RG/QbDb3YeFOefMsiAPdH41GB3mM4nZ6wcWv5Y2ZW8ya
+        ZucxilvqOS6s4It0orQxaznrS8z9hMf4k2pBrnLcGFWUoxw3RhXlKMeNUUU5ynFjVFGOctwYVZSjHDdG
+        FeUox41RRTnKcWNUkSsjbFSGKyNiVJErI2xUhisjYlSRKyNsVIYrI2JUkSsjbFSGKyNiVJErI2xUhisj
+        YlSRKyNsVIYrI2JUkSsjbFSGKyNiVJErI2xUhisjYlSRKyNsVIYrI2JUkSsjbFSGKyNiVJErI2xUhisj
+        YlSRKyNsVIYrI2JUkSsjbFSGKyNiVJErI2xUhisjYlSRKyNsVIYrI2JUkSsjbFSGKyNiVJErI2xUhisj
+        YrDpabXIlRE2KsMx/O/inDnTptH4DdEDLicLxJzwAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="ProfileBTN.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DAAACwwBP0AiyAAACqhJREFUeF7lW2usXFUVnio+Ecqds+dewAe+NVGj0cQXKkaNRPnjq2hVgooWMKlK
-        bgpt75wZNQb4QY0vSiAxVOoPg69/EH/4BIU2QimlsT5SERQsSCottNaZe4/ft/Z3ZubMPXPmzJlzuFW/
-        ZOeeWXvvtdZe+7X22vvWVgrRZTOru013LlPUrp8s8v8HOu36u7ut4KHFlouY+E2asv+3gcbOd1uu6xvu
-        fsOk7y7zVOy/ExzKaMTFi6G7vBu6dVHbvS3adGrD8i55zjPQ0O1q7NJiGHwxqtVWMfHbaH5EbGdZq4O6
-        5EFenmdwUbQhOIl5xx2ijScFUPD3akQioXH/QCMese8wONwJ6+9XtR5IY54v4x5hnUEecQJ9X9Q+ua5q
-        xw8WW8EWUzB0e9ij6LFt+N6B9GhP+TD4ddSeeaWqLAPzWKZf3j1KHuRloyR0e31esEVVjg9E61/8tLjH
-        otC9TuQeos3utHgq5IENfdTRzx7I2wwDWZQp8sqDW5nvsWC3SJUBMnZ5IzTWiLTywPC8WUqtF6kyYBp8
-        jrIwDW4SaWXBYYkhyS3sX1wIRV4Grt4otxbGug5/d3Lvx99/q+4fovbcrIpmwhZbyGK9tOn2hMDP+cYa
-        9gIVsR4J3VXKToBzGfnXYOg+7ntueUKvHowWZp6rKvQVuJVujRYaLxIpgd6Ca7KpQ2PNE7Im0PpsKBrz
-        cE959AYVitpnPF3FDFQIvf1l5D/Wb2hwBxrb6rSDt0ft4OXR/NyJ0Zrak6N1taeomgENu8eXdx3IuzL2
-        C2JQFmV62T3eD1O3yrZIc3IG9nkIv4vzMU1g1G6cikbEHh6dnu9HzeBlyh6LaOGUM9DAG2NZSN9UVgKU
-        TR2oS1wW8vZV4ixByIUScE/W3LO9vOXu82WD/TDcG5U1MSDnrTDEDzqhO0ekkdBaFI+cdSKXByjyJRmg
-        LdIyqOd948Pgl1H7NKesqQFjbkC6G4vl80VaBjpLlM2pJ1J5oFWNeSu4XqQEOC/ReD/srfG1pyqrFIDv
-        tcYbMsD7BJEToG5efgUjwA9HU+B2kRKg1X0+h315PR8j2rh6BrLvpQzI+orICVA35vMAJVJ5oHsqA/xT
-        pB641aHhjyFvaZI5H4X1N6AeF9Ofi5QJTLE3Q0YXI+wodpHTRe6BunkD5PMpJgYEeH9/0+ycSAbQriGd
-        q71ImbBtDNsbG2P1kJQ1FpDxPcn6qkgG6kQ6dRSpXHAv7hugf7AxDw9ODvKW8m51KGtDtYgBoubsqyiL
-        Iw5T7Zkiw6hzs7EBhv2GUgDmPpiB46pIBghcK/odIo0Fyt5iKzqmAOsyKSsXMGVuYx1sj+8RyUDdxG+7
-        SOUAys6TMQQcHj7PYyhe5/NcS6SJIIUnMgBkxtvd10QyyAc5ZPqUFV7zAUweWNxSWiQH9J0USPdWpIlQ
-        xADYkc5SI28VqQeLLNkUcd2pA60Wuo6jt7C6yAlgVNi5AFvPS0WaCIUMgEOSDPAnkRKIRwh0OzBVyL3b
-        dB/xguB81GqrRE4AQ/8YyxT1v1mXST9zAdvhs9TAwyIlQF2ps5VpunNFnhxg8mFjkm2ADsuM8s7GgXWZ
-        9DMX/GnQDHBUpAQSBpgmcpRnCmA/34b0E/2cGMUMEJwuAzwoUgKlTQECC8m72MuwKBaW8uNwRQyABfcd
-        amBiSyaQ9z7ou8g0vE0WBrcUE4gtJmrOvELkUlDEAGj4pVYvdFtFMiis7u8Wyr5lwknr28Y4xerToJAB
-        sP2xzvC2DPqvxK9cR4gY5QrHsNOaXYeNPwzRiFJ0WULeLSqWCobS/HSEKzw/d6LIoFfsChN9Ayw7DF0B
-        hY6oAbtEHgk2kmXTEntRxVKBYf8tlb1aJEP1h6GM4zAa9GcuOtwNorBxpsiVAPIXIOsvUXv2hSL1QN2o
-        YyXH4ayACAUykKmfKwbq5g1QQUCE85vMR4XEBsGIEEbFpWlrRV6wrvGYILpUaUgMzMcGRQmOBiiwx5cN
-        Nog8Mdh4NWZP3iEdO0D4W0FQNA6Lh24vQ9AiLwPK/aKvePHYoB9FMmSOkBmG/Wupm5Vvuc+IXB7oUoLx
-        PrOwCUm/GIH1v4HF8KeDvYZ6n0f5/WkLVwyuMShzJ+N+ItlogqyfkadICdjFSKuxHqPFboxNr9D9rrJX
-        JBSIqbAFQhYHDJF6NRaDYSuUt9chUbPxapHNF0Dq7fn4vsh45jhXpF+N2S50Ff0RFasGnXbjQ2r4Q+iZ
-        m9G7mZejKHeeL5/cPWLF9VNh7+AIGwKX9nkip4KNF8+u18Ef2KibilQD8wax53vhwYVGG3M9bqHvMNjN
-        A4xIhmEDEFy8wOveYUdrEH7Y63oc85406mI6QbfKvEACvdNU4+/ira7I7JGbPD3/AwkOf/DJ9PrSQBne
-        eP0HEtSFOnkjuKbI5SLaXH82hNhV93D8j8dkGeZukSoDDGcL3vBwx+L5FoyKJeQ/Pm4KFQKEWlgcw3TZ
-        5Yc9mIhjgylbJC9N0x49jQKdINbRzx445M3QkJX2IIK6mY5lnwZ5wpN1j0YLcy8QOQEugqYcr6jNIQmu
-        x/ftSOafK29nVjyBeZDRfyaHuuRBXuSJb7v+HrXgUjfqiHITXdFlAqvUKsyrHV5w+qUk4Renvp8wmEDv
-        P5RsuUMjH0rGMf2sh5Lc5zO2Ouqocjuou8jF0W3VzzeGLfdXRmNFToUeQl1AJaBA8qlse/Up6B17J4Qy
-        I5/KsgzLWh2bCvFTWfBsuk+Nc3KoI3X1curni1wMnlnwgGcWnCdyIaBhG9XAB6Gg+Q74m3wsjTyV2ahq
-        hUBdpfMD4zotE5hrl3uF3G3TDCd/fe6HdycM3tkJG2dDuf5z+TA4wFsc5nnF3aFJFs1haNra/SHbIPJk
-        oN8OxfyCAmdG5EKAEtukzI9FAn+cLVL+YYJlVHabSIXg3x5o4c44g4wElPhROYrAU4R7i3QsarqXiDwS
-        CcO3668XuRCg/3fUhh+KlA8DcffDaS8x8sIPRcX/JhiKKH+Flz/l1INLDR72Wj33Ram5lfDdTYFWfZPI
-        hdBtBh/3fIK/Dw7zcbDFN3R/U92PiVwI4LNZxtyb6/oOAi9WhWP4nke6DN8t9OCVcEi+jrxr8f1dpBtG
-        PWUlGLJGvfuNV7PxCZFzg3Wkx/2D4e9h2E0xdDGd7CUZdOTzG+hsurMNusBl21RtNND7qf/1kZoyzu7Y
-        t/VqDN5fu/YkkXODdVjXyxkd4qIOCZ0yEvjtU7XRMMv7h0h8l3c1rUkFNBK+gLSOZfD3IJkOH3MJRohR
-        /ogtZOHMm0SeGKxLHuSVFnXur1XuIA5knzTdWu4S6krHyevutlpb0KapHaNBQNCCCWcPDy1UEFbaoQQN
-        4NAGr+BGkXpAg22vn3atKgRdlZnLiRX2AyKj1xpnWq+VdCwdPIZjSz1LZJwdGh/0jYe3l7FGVAo08rNe
-        Cf4nV+0EzdvfGq3EwAR4hp5nsMue19tOFUeAcyxsVYHv/KHUH2WEC6BM/KL8PgZDVWxq2DvkOBRna5D7
-        tBq/H0Yv9U3yxMBe/9G40VDygP8u/yFFL+oEGZQlmWuVvXIwb68V3EmFvFLBrdN4b1kAb7t0kSF2F9le
-        K0Gn7d7rlXKLaSGxsgAP8TXodTtKl/b8pSxwK+JerJ+VgUGR8ra9Wu0/z16ShP5KYaIAAAAASUVORK5C
-        YII=
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAJaSURBVGhD7ZndShtBGIbTf5QeeCB4OdIiKAgtSla8ghwE
+        kpAfCYiaHtWeeRHao+KN9EwtVUurbW+gpfFQUt8PXkoYPvZnZjszwj7wEpGdd57Z7CazWquouCc0Go0n
+        /X6/jhwh571e7wavY/mZv6vLMTw8TgaDwWuIf4Hs37TIMXIsh8XDaDR6CMF9UzgjEyzorYxlTXggVXQR
+        /yKLYU1Y5BKB0MQULBB5Z16xLgxy0+a5J3LkGy6xp6z1DwTk00kTs0mdtf7Bu/FeEbLNIWv9g8kvDRnr
+        4KRcsNY/EJAvOlXMImPW+keRcQpr/aPJuIS1/tFkXMJa/2gyLmGtfzQZl7DWP5qMS1jrH3z2/9aEbCJd
+        rPUPBE5NIdtgISes9Q8E5IlPFbNI0C3KqiFjnW63u8Ja/2Dr/RgS16ZU0eCy+ipdrA0DRF4iTg9WeDhb
+        Yl1YcEYPFMG82WdNHEDojSGYGZyAdxweF5psWjgsPjTZtHBYfGiyaeGw+NBk08JhcdFutxc02bTgZp/n
+        8Ch4gO+BNUhdabJpwZgzfKO/YE8YkiR5BJlNxHnjiAV9xOuGdLL+/9NsNp9j0gZS2p+CpiLbnWGn05nj
+        dOWDvdAsJtnD2SvtGSQlv5AdXHYznL4c5DpG8c+pibwEJ+075l6khhsoHCK30xN4jsy9RR07cEZ2jdJg
+        gcs2tYohW2sUuGzPy478H2WZevlotVrPMOiHUhY0cs+IGzWzwYBEK4ok69TMBgs5VgqiCNw+UDMbDPhs
+        FkSUT9TMBqv+oxREEXGjZjZaQUyhZkVFRW5qtTsWSr9LWHyaFQAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="CartItemsBTN.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DAAACwwBP0AiyAAAAVRJREFUaEPtmE1Ow0AMhXOFNkPFzxH4uRCquAWgqkmO0fYyLIg4U0FKNdiDZwg0
-        IzWb6CHeJ3mRsa15T55sXBBCCCFkgEPtXiQ8cnRV2ZrcYfxqfjXUiBi+KS9N9jHi9NkKN3YEh2jbqcau
-        Lp/s6Bt1p4much9iZu/Xs2tLweHXi1vR+h60iuY0GRH+ZlPQt7eX5H1IACMal2qmp7vVUcV3t0GexG98
-        M7s5VG4b9Scjlv9z0AgaNILGaCOxbuqw67OkurENU4ddnyXVndqACo2gQSNo/F8jsW7qsOuzpLqxDVOH
-        XZ8l1Z3agAqNoEEjaBwZkdjpqsXy8Phmcaeao35dB7XxI+yL6nJptbB09fxB91o93a8h8WNBJ2Z01RIS
-        gOgkvhaJYZn4OLg6VTPBZeW2dgSH6MuvTCO+OTuP40IPv3IXJnuY/j+DGumfIIQQQkifovgE16JKIu+w
-        uksAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAALPSURBVGhD7Zm9axRBGMbvVFAEaxVMI/gVBZFg41+giOXZ
+        KYKKKLnvD+zuL7AQBAsbC4kfiYqISSUS7G0sRLCKikY84omFoEZ/E59AdplE3Z0Zb8QfPBz33sw877Oz
+        t7fLFf4zaDSbzcPoFfq+guYajcZ0vV4/zpTiz5kDBg2+tDS+rBh/lWmDFyYVZEblBJVKZSOfnWTsJzNO
+        OzNY0NghhZmhwYMqW2HcKRMEPVEpTsrl8lrCvDdharXabpXjhBDXtCujKsVJq9U6bYKwM+MqxQkBtmtH
+        3vF2MC/FvwthXivMsEpxQoAxBTmnUpxwmT5jgrAzN1WKEwLsVJBZ3v4b3xMTSqU4IcQNE+RvioP4SO1k
+        h0XO2hYPKXp4oXayw0LD6YVDiyBdtZOLIou9TS8eUPPc721VL/ngiIxbDIII74dqIz8sOJo2CKhjaiM/
+        LLYntXgo9bvd7nq14YQiWzxrMfKtK/J3B0FuW4y8Cs8DsncHC1fSRp71HFv3t0XcQO61mHkTu3Fe1s4x
+        35OF53jfwucbGpKvezC5mzb1pClZ+oHn+JrF1IeOytIPbPc+i6lr9fjtWCdLP2CwyhiljF3rkuz8gtG9
+        lLFrjcjKL5xeDYu5E7H0U9n4B8ORdAOuZA6SbPxTKpVWYzqXbiKvyPCFq+Im2YQB4/vpRnJqniAXtXw4
+        MG6bBjC/rFKcEGK/juQzleKE35M1hOgj8zy9WeU4IcTC94TT64RKcbLk/5NpleKk3W5vIMTibf2FarW6
+        y/s9ki8IcAR9VhgXeqylw4O5CWNrKou+djqdLVo6LJgv/mn6wDRhxCk3aWq8XtewBKb+p3O8g/Eb08DS
+        I0ltSI32VEpg6ivM6asUFhr4uFxTvH5QKUGWOd7B+I4amDTNqKEpU0MTGpYgyxzvcBnegbntqbHHZ9s0
+        LEGWOUEwpwhN3ELmtsVo4lcNZZlTKBQKPwAZrjM/OxN12QAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="OrdersBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DAAACwwBP0AiyAAAAVRJREFUaEPtmE1Ow0AMhXOFNkPFzxH4uRCquAWgqkmO0fYyLIg4U0FKNdiDZwg0
-        IzWb6CHeJ3mRsa15T55sXBBCCCFkgEPtXiQ8cnRV2ZrcYfxqfjXUiBi+KS9N9jHi9NkKN3YEh2jbqcau
-        Lp/s6Bt1p4much9iZu/Xs2tLweHXi1vR+h60iuY0GRH+ZlPQt7eX5H1IACMal2qmp7vVUcV3t0GexG98
-        M7s5VG4b9Scjlv9z0AgaNILGaCOxbuqw67OkurENU4ddnyXVndqACo2gQSNo/F8jsW7qsOuzpLqxDVOH
-        XZ8l1Z3agAqNoEEjaBwZkdjpqsXy8Phmcaeao35dB7XxI+yL6nJptbB09fxB91o93a8h8WNBJ2Z01RIS
-        gOgkvhaJYZn4OLg6VTPBZeW2dgSH6MuvTCO+OTuP40IPv3IXJnuY/j+DGumfIIQQQkifovgE16JKIu+w
-        uksAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAFGSURBVGhD7Y5BikQhFMT+nf/9mdlEEQlSCA3V0IGsfMR6
+        fnwL7/v+Ncq8HIs0yLwcizTIvByLNMi8HIs0yLwcizTIvByLNMi8HIs0yLwcizTIvByLDDn5GPbnkJMc
+        iww5+Rj255CTHIs0yLwcizTIvByLNMi8HIs0yLwcizTIvByLNMi8HIs0yLwcizTIvByLNMi8HIs0yLwc
+        izTIvByLNMi8HIsMOZmc3m5Ye7uc5FhkyMnk9HbD2tvlJMciDTIvxyINMi/HIg0yL8ciDTIvxyJDTian
+        txvW3i4nORYZcjI5vd2w9nY5ybFIg8zLsUiDzMuxSIPMy7FIg8zLsciQk8np7Ya1t8tJjkWGnExObzes
+        vV1OcizSIPNyLNIg83Is0iDzcizSIPNyLNIg83Is0iDzcizSIPNyLNIg83Is0iDzfpTzPP8d32njuBRO
+        0QAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="LogoutBTN.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DAAACwwBP0AiyAAAAP9JREFUaEPtkUEOwkAMA/sAbpTnUv4GH+EhReUS5xAhRU2MtrvNSD7Ucqy1OhVF
-        URRN+CzzNoLGGyI/qDtqyNE4zxD4WUkdvQ+o7wWykrr2Q+RzN/ae3QfUdwNB7D27D6jvBoLYe3YfUN8N
-        BLH37D6gvhsIYu/ZfUB9L5CV1NH7gPpeICupazekF84zBH5WUkfvA+p7gaykrv0Q+dyNvWf3AfXdQBB7
-        z+4D6ruBIPae3QfUdwNB7D27D6jvBoLYe3YfUN8LZCV19D6gvhfISuraDemFGnI0xh3Su8YZUvTI9rhd
-        1mV+//ql/9R6v77kCRyaDVmuT3lCURRFcUSm6Qu/s2Vi0BNvmwAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAIoSURBVGhD3Zq9SsNwFMU7uYqO4qaruoiTg/pE/UyydbMq
+        PoD4gS8hvoAIDvYJXNu+gIg46bnhBGK88SYo+d/2wI9W03M5x9u0qbQ1HA6Xer3eKZiBTw90u90pOJFs
+        raoSgzbMCSPGtIUHu9mEwowxbSlmVzCmLc3sCca0pZk9wZi2NLMnGNOWZvYEY9rSzJ5gTFua2ROMaUsz
+        e4IxbWnmwNziamO/3W7v4vacMW0pg0JywVj1pQwLRqfT2WGmK2zjLo7j5TRkFRWHhQRFNiUTSozlZ9w+
+        VS5THBaYWDJFUbSO+y/yu8plckOCg9Dv2Mqh5KpdJj/IAwj9htsjyVYoM0bJ1TS0pmyAJ6RMyWbKy+QH
+        eIKbOZCMlcpkRqe8MqZ9zuRMLmHMVL9uJm+qAwZ9gGgwGKxxVCMq3Uw+XE3S1/wQUsvkgtUi2wTuPxaP
+        NY2U+Y8iD8VjTfOnIjAnUiSE/vWphQFysieLcLI3QhqSypcAz0mSrPCQ+yLz/4aIsOolCvi+iUw86Aop
+        oV00Ar2EKDN7gZv4cRkPykuI+CAXoMTCfLBajI+6/X5/QzIh/Hz/8wFPqy3JhALX4L5yCZE2MBQIf8lY
+        9aUNDMwNNrOHp9k2ip0xpi1lkCsY05Zm9gRj2tLMnmBMW5rZE4xpSzN7gjFtaWZPMKYtzewJxrSlmT3B
+        mLbwpjPVBjhhwpi28OBRwewG/JGPGdMWv3g2craZiZSo/sWzVusLrMvbRr8nGwYAAAAASUVORK5CYII=
 </value>
   </data>
 </root>
