--- a/Presentation/Properties/Resources.resx
+++ b/Presentation/Properties/Resources.resx
@@ -118,10 +118,16 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="preview16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\preview16.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="87fa0ce21521bb9edd2f42ab9b25685e" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\87fa0ce21521bb9edd2f42ab9b25685e.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="4211763" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\images\4211763.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="preview16" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\preview16.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="3443549" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\3443549.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
